@@ -1,3 +1,8 @@
+2004-09-23  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* lib/msafd/makefile (TARGET_CFLAGS): Don't define DBG.
+	* lib/msafd/include/debug.h: Redefine ASSERT.
+
 2004-08-25  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* tools/cdmake/cdmake.c: Error out if extension is too long.
